<resources>
    <string name="app_name">Submarines</string>
    <string name="instructions">OBJECT OF THE GAME\nBe the first to sink all 4 of your opponent\'s ships.</string>
    <string name="submarines">Submarines</string>
    <string name="start">New Game</string>
    <string name="instructions2">Instructions</string>
    <string name="new_game">New Game</string>
    <string name="todo">TODO</string>
    <string name="Go_back">Return</string>
    <string name="vs">VS</string>
    <string name="join">Join</string>
    <string name="user">User</string>
    <string name="game_id">Game Id</string>
    <string name="select_game">Select Game</string>
    <string name="opponent_turn">Opponent Turn</string>
</resources>