<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submarines"
        android:textSize="60sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:textColor="#EDEFF4"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp"
        android:backgroundTint="#F8F9FA"
        android:text="@string/start"
        android:textColor="#020825"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btnInstructions"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#F8F9FA"
        android:text="@string/instructions2"
        android:textColor="#020825"
        android:textSize="40sp" />

</LinearLayout>