<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity"
    android:orientation="vertical"
    android:background="@drawable/submarines_background1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions2"
        android:textSize="60sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#EDEFF4"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="You need to destroy all the hiden submarines to win the game"
        android:textColor="#EDEFF4"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/battleship_game" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#F8F9FA"
        android:layout_marginStart="50dp"
        android:text="@string/Go_back"
        android:textColor="#020825"
        android:textSize="40sp"
        android:id="@+id/btnReturn" />

</LinearLayout>